🔨 Refactoring to enhance code quality and readability
- Removed unused imports across multiple classes
- Replaced usage of `collects.Collections` with `toList()` for improved readability and performance
- Added `@EqualsAndHashCode(callSuper = true)` annotation to classes with inheritance to ensure correct equality comparison